Bug 163428 - Changing default font size breaks layout of digital clock
Summary: Changing default font size breaks layout of digital clock
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-07 10:52 UTC by Georg Wittenburg
Modified: 2008-06-09 19:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (20.21 KB, image/png)
2008-06-07 10:53 UTC, Georg Wittenburg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Wittenburg 2008-06-07 10:52:44 UTC
Version:           4.1 Beta 1 (using Devel)
Installed from:    Compiled sources

Changing the default font size (Control Center -> Appearance -> Fonts) breaks the layout of digital clock (see attached screenshot). It seems as if the date string gets broken into two lines and there is not enough room for the time afterwards. The expected behavior would be to expand the horizontal width of the plasmoid as required by length and font size of the date string.
Comment 1 Georg Wittenburg 2008-06-07 10:53:30 UTC
Created attachment 25182 [details]
Screenshot
Comment 2 Sebastian Sauer 2008-06-09 19:34:19 UTC
fixed with r818796 - thanks for the feedback :)