fix changing default font size breaks layout of digital clock

BUG:163428


svn path=/trunk/KDE/kdebase/workspace/; revision=818796